<resources>
    <string name="app_name">CloneGenie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--detail fragment-->
    <string name="detail_title">2021.11.9</string>
    <string name="detail_explain">솝트 3차 과제입니당</string>
    <string name="detail_collection_song">수록곡</string>
    <string name="detail_collection_song_count">5곡</string>
    <string name="detail_select_all">전체선택</string>
    <string name="detail_listen_all">전체듣기</string>
    <string name="detail_editing_order">편집순</string>
    <string name="detail_edit">편집</string>
    <string name="home_bottom_navigation_whole_menu">전체메뉴</string>
    <string name="home_bottom_navigation_my_music">내음악</string>
    <string name="home_bottom_navigation_search">검색</string>
    <string name="home_bottom_navigation_for_you">For You</string>
    <string name="home_bottom_navigation_home">홈</string>
    <string name="home_player_music_name">21</string>
    <string name="home_player_music_singer">Gracie Abrams</string>

    <!--my music fragment-->
    <string name="my_music_tool_bar_title">내음악</string>
    <string name="my_music_playlist">내 플레이리스트</string>
    <string name="my_music_whole">전체</string>
    <string name="my_music_count">211</string>
    <string name="my_music_edit_order">편집순</string>
    <string name="my_music_order">편집</string>
    <string name="my_music_fold">접기</string>
    <string name="my_music_unfold">펼치기</string>
    <string name="my_music_my_favorite_title">내가 좋아한</string>
    <string name="my_music_unit">곡</string>
    <string name="my_music_my_storage_title">내가 보관한</string>
    <string name="my_music_recent_play_title">최근 재생한</string>
    <string name="my_music_lot_played_title">많이 재생한</string>


</resources>