<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home_bottom_navigation_home" />

    <item
        android:id="@+id/menu_for_you"
        android:icon="@drawable/ic_for_you"
        android:title="@string/home_bottom_navigation_for_you" />

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:title="@string/home_bottom_navigation_search" />

    <item
        android:id="@+id/menu_my_music"
        android:icon="@drawable/ic_my_music"
        android:title="@string/home_bottom_navigation_my_music" />

    <item
        android:id="@+id/menu_whole_menu"
        android:icon="@drawable/ic_whole_menu"
        android:title="@string/home_bottom_navigation_whole_menu" />
</menu>